--- a/src/assets/styles/components/menu.css
+++ b/src/assets/styles/components/menu.css
@@ -1,22 +1,22 @@
-
-  .menu {
-    position: fixed;
-    z-index: 2;
-    bottom: 0;
-    width: 100%;
-    height: 8vh;
-    line-height: 8vh;
-    background: var(--bg);
-    border-top: .5px solid var(--text-light);
-  }
-  .menu > * {
-    text-align: center;
-  }
-  .menu > a {
-    color: var(--text-gray);
-  }
-  .menu > button {
-    height: 80%;
-    border-radius: var(--border-radius);
-    color: var(--white);
-  }
+.menu {
+  position: fixed;
+  z-index: 2;
+  bottom: 0;
+  width: 100%;
+  height: 2.5em;
+  line-height: 2.5;
+  color: var(--text-light);
+  background: var(--bg);
+  text-align: center;
+}
+.menu > a {
+  color: var(--text-gray);
+}
+.menu button {
+  display: inline-block;
+  width: 80%;
+  border-radius: var(--border-radius);
+  color: var(--white);
+  background: var(--primary);
+  line-height: 1.5;
+}
