--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -4,7 +4,12 @@
 @import "common/_variables.css";
 @import "common/_reset.css";
 @import "common/_btn.css";
+@import "common/_list.css";
 @import "common/_base.css";
 
 /* components */
+@import "components/header.css";
 @import "components/menu.css";
+
+/* pages */
+@import "pages/task.css";
