--- a/src/assets/styles/common/_base.css
+++ b/src/assets/styles/common/_base.css
@@ -3,7 +3,7 @@ html, body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     color: var(--text-dark);
-    background: var(--white);
+    background: var(--bg);
     min-width: 320px;
     font-size: var(--font-base);
 }
@@ -46,6 +46,7 @@ textarea {
   line-height: normal;
 }
 a {
+  color: inherit;
   text-decoration: none;
 }
 input[type="checkbox"],
@@ -53,32 +54,51 @@ input[type="radio"] {
   box-sizing: border-box;
   padding: 0;
 }
-
 @font-face {font-family: "tomato-icon";
-  src: url('//at.alicdn.com/t/font_250008_pgego7908bjd1jor.eot?t=1503478036697'); /* IE9*/
-  src: url('//at.alicdn.com/t/font_250008_pgego7908bjd1jor.eot?t=1503478036697#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('//at.alicdn.com/t/font_250008_pgego7908bjd1jor.woff?t=1503478036697') format('woff'), /* chrome, firefox */
-  url('//at.alicdn.com/t/font_250008_pgego7908bjd1jor.ttf?t=1503478036697') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('//at.alicdn.com/t/font_250008_pgego7908bjd1jor.svg?t=1503478036697#tomato-icon') format('svg'); /* iOS 4.1- */
+  src: url('//at.alicdn.com/t/font_250008_9nregwy8ir7ldi.eot?t=1503650884682'); /* IE9*/
+  src: url('//at.alicdn.com/t/font_250008_9nregwy8ir7ldi.eot?t=1503650884682#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('//at.alicdn.com/t/font_250008_9nregwy8ir7ldi.woff?t=1503650884682') format('woff'), /* chrome, firefox */
+  url('//at.alicdn.com/t/font_250008_9nregwy8ir7ldi.ttf?t=1503650884682') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('//at.alicdn.com/t/font_250008_9nregwy8ir7ldi.svg?t=1503650884682#tomato-icon') format('svg'); /* iOS 4.1- */
 }
-
 .tomato-icon {
-  font-family:"tomato-icon" !important;
+  font-family: "tomato-icon" !important;
   font-size: var(--font-base);
-  font-style:normal;
+  font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.icon-more:before { content: "\e638"; }
+
+.icon-pin:before { content: "\e67c"; }
+
+.icon-tick:before { content: "\e621"; }
+
+.icon-start:before { content: "\e6ce"; }
 
 .icon-bar:before { content: "\e60d"; }
 
+.icon-pin-fill:before { content: "\e600"; }
+
+.icon-selected:before { content: "\e64e"; }
+
 .icon-user:before { content: "\e609"; }
+
+.icon-unselected:before { content: "\e79e"; }
 
 .icon-list:before { content: "\e608"; }
 
 .icon-clock:before { content: "\e60a"; }
 
+.icon-submit:before { content: "\e606"; }
+
 /* typesetting */
+.break .break {
+  background: var(--break);
+}
+.white {
+  background: var(--white);
+}
 .fullscreen {
   width: 100vw;
   height: 100vh;
@@ -86,8 +106,8 @@ input[type="radio"] {
 }
 main {
   padding: var(--padding-large-horizontal);
+  margin-top: 9vh;
   margin-bottom: var(--padding-large-horizontal);
-  background: var(--white);
 }
 .content {
   background: var(--white);
@@ -119,6 +139,12 @@ no-padding {
 }
 .color-light {
   color: var(--text-light);
+}
+.color-lighter {
+  color: var(--text-lighter);
+}
+.color-white {
+  color: var(--white);
 }
 
 /* border */
@@ -162,25 +188,21 @@ no-padding {
   font-family: var(--font-en);
 }
 /* font-size*/
-.font-largest {
-  font-size: var(--font-largest);
+.font-large {
+  font-size: var(--font-large);
 }
 .font-larger {
   font-size: var(--font-larger);
 }
-
-.font-large {
-  font-size: var(--font-large);
+.font-largest {
+  font-size: var(--font-largest);
 }
-
 .font-small {
   font-size: var(--font-small);
 }
-
 .font-smaller {
   font-size: var(--font-smaller);
 }
-
 .font-smallest {
   font-size: var(--font-smallest);
 }
