修改组件样式

--- a/src/assets/styles/common/_list.css
+++ b/src/assets/styles/common/_list.css
@@ -1,11 +1,8 @@
-.list {
-  overflow-y: scroll;
-}
 .list li {
   position: relative;
   padding: var(--padding-horizontal);
   background: var(--white);
-  border-bottom: var(--border);
+  border-top: var(--border);
 }
 /* .list li::after {
   content: '';
