--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -5,6 +5,7 @@
 @import "common/_reset.css";
 @import "common/_btn.css";
 @import "common/_list.css";
+@import "common/_scrollbar.css";
 @import "common/_base.css";
 
 /* components */
@@ -12,4 +13,5 @@
 @import "components/menu.css";
 
 /* pages */
+@import "pages/common.css";
 @import "pages/task.css";
