--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -3,6 +3,7 @@
 /* common */
 @import "common/_variables.css";
 @import "common/_reset.css";
+@import "common/_iconfont.css";
 @import "common/_btn.css";
 @import "common/_list.css";
 @import "common/_scrollbar.css";
@@ -11,6 +12,7 @@
 /* components */
 @import "components/header.css";
 @import "components/menu.css";
+@import "components/tagFilter.css";
 
 /* pages */
 @import "pages/common.css";
